# Description:
#   Tests for espresso concurrent idling resrouces

licenses(["notice"])  # Apache License 2.0

## Robolectric tests

android_local_test(
    name = "IdlingScheduledThreadPoolExecutorTest",
    size = "small",
    srcs = ["IdlingScheduledThreadPoolExecutorTest.java"],
    manifest_values = {"minSdkVersion":"14"},
    tags = ["robolectric", "gcb_ignore"],
    deps =  [
        "@maven//:junit_junit",
        "@maven//:net_bytebuddy_byte_buddy",
        "@maven//:net_bytebuddy_byte_buddy_agent",
        "@maven//:org_mockito_mockito_core",
        "@maven//:com_google_truth_truth",
        "@maven//:org_objenesis_objenesis",
        "@maven//:org_robolectric_robolectric",
        "@robolectric//bazel:android-all",
        "//espresso/idling_resource/java/androidx/test/espresso:idling_resource_internal",
        "//espresso/idling_resource/concurrent/java/androidx/test/espresso/idling/concurrent:scheduled_thread_pool_idling_resource",
        "//ext/junit",
    ],
)

android_local_test(
    name = "IdlingThreadPoolExecutorTest",
    size = "small",
    srcs = ["IdlingThreadPoolExecutorTest.java"],
    manifest_values = {"minSdkVersion":"14"},
    tags = ["robolectric", "gcb_ignore"],
    deps =  [
        "@maven//:junit_junit",
        "@maven//:net_bytebuddy_byte_buddy",
        "@maven//:net_bytebuddy_byte_buddy_agent",
        "@maven//:org_mockito_mockito_core",
        "@maven//:com_google_truth_truth",
        "@maven//:org_objenesis_objenesis",
        "@maven//:org_robolectric_robolectric",
        "@robolectric//bazel:android-all",
        "//espresso/idling_resource/java/androidx/test/espresso:idling_resource_internal",
        "//espresso/idling_resource/concurrent/java/androidx/test/espresso/idling/concurrent:thread_pool_idling_resource",
        "//ext/junit",
    ],
)
